--- a/style.css
+++ b/style.css
@@ -57,3 +57,9 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.footer {
+  text-align: center;
+  padding: 50px;
+  font-size: 24px;
+}
